@@ -51,15 +51,15 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
 	    String[] split = value.split(",");
 	    if (split.length > 1) {
 		LogicalBond orBond = BondFactory.createOrBond();
-		for (int i = 0; i < split.length; i++) {
-		    orBond.getOperands().add(BondFactory.createSourceIdentifierBond(split[i]));
+		for (String s : split) {
+		    orBond.getOperands().add(BondFactory.createSourceIdentifierBond(s));
 		}
 		return Optional.of(orBond);
 	    }
@@ -152,7 +152,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -169,7 +169,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -271,7 +271,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -300,7 +300,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -316,7 +316,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -331,7 +331,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -346,7 +346,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -361,7 +361,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -374,7 +374,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -387,7 +387,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -399,7 +399,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -414,7 +414,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -430,7 +430,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -446,7 +446,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -461,7 +461,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -515,7 +515,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -530,7 +530,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -545,7 +545,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -561,7 +561,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -576,7 +576,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -588,16 +588,13 @@ public abstract class OSParameters {
 
 	    BondOperator operator = BondOperator.decode(timeRelation);
 
-	    switch (operator) {
-	    case INTERSECTS:
-		return Optional.of(
+	    return switch (operator) {
+		case INTERSECTS -> Optional.of(
 			BondFactory.createSimpleValueBond(BondOperator.GREATER_OR_EQUAL, MetadataElement.TEMP_EXTENT_END, value));
-	    case CONTAINS:
-		return Optional.of(BondFactory.createSimpleValueBond(BondOperator.GREATER, MetadataElement.TEMP_EXTENT_BEGIN, value));
-	    case DISJOINT:
-	    default:
-		throw new IllegalArgumentException("Operator not yet implemented: " + operator);
-	    }
+		case CONTAINS ->
+			Optional.of(BondFactory.createSimpleValueBond(BondOperator.GREATER, MetadataElement.TEMP_EXTENT_BEGIN, value));
+		default -> throw new IllegalArgumentException("Operator not yet implemented: " + operator);
+	    };
 
 	}
     };
@@ -609,7 +606,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -624,7 +621,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -639,7 +636,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -654,7 +651,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -669,7 +666,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -684,7 +681,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -699,7 +696,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -711,17 +708,12 @@ public abstract class OSParameters {
 
 	    BondOperator operator = BondOperator.decode(timeRelation);
 
-	    switch (operator) {
-	    case INTERSECTS:
-		return Optional.of(BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.TEMP_EXTENT_BEGIN, value));
-
-	    case CONTAINS:
-		return Optional.of(BondFactory.createSimpleValueBond(BondOperator.LESS, MetadataElement.TEMP_EXTENT_END, value));
-
-	    case DISJOINT:
-	    default:
-		throw new IllegalArgumentException("Operator not yet implemented: " + operator);
-	    }
+	    return switch (operator) {
+		case INTERSECTS -> Optional.of(
+			BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.TEMP_EXTENT_BEGIN, value));
+		case CONTAINS -> Optional.of(BondFactory.createSimpleValueBond(BondOperator.LESS, MetadataElement.TEMP_EXTENT_END, value));
+		default -> throw new IllegalArgumentException("Operator not yet implemented: " + operator);
+	    };
 
 	}
     };
@@ -733,12 +725,12 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
 	    return Optional.of(BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.QML_MAGNITUDE_VALUE,
-		    Double.valueOf(value)));
+		    Double.parseDouble(value)));
 	}
     };
 
@@ -749,12 +741,12 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
 	    return Optional.of(BondFactory.createSimpleValueBond(BondOperator.GREATER_OR_EQUAL, MetadataElement.QML_MAGNITUDE_VALUE,
-		    Double.valueOf(value)));
+		    Double.parseDouble(value)));
 	}
     };
 
@@ -765,12 +757,12 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
 	    return Optional.of(
-		    BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.QML_DEPTH_VALUE, Double.valueOf(value)));
+		    BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.QML_DEPTH_VALUE, Double.parseDouble(value)));
 	}
     };
 
@@ -781,12 +773,12 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
 	    return Optional.of(BondFactory.createSimpleValueBond(BondOperator.GREATER_OR_EQUAL, MetadataElement.QML_DEPTH_VALUE,
-		    Double.valueOf(value)));
+		    Double.parseDouble(value)));
 	}
     };
 
@@ -797,7 +789,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -824,11 +816,11 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
-	    return Optional.of(BondFactory.createIsGEOSSDataCoreBond(Boolean.valueOf(value)));
+	    return Optional.of(BondFactory.createIsGEOSSDataCoreBond(Boolean.parseBoolean(value)));
 	}
     };
 
@@ -839,11 +831,11 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
-	    return Optional.of(BondFactory.createSimpleValueBond(MetadataElement.IN_SITU, Boolean.valueOf(value)));
+	    return Optional.of(BondFactory.createSimpleValueBond(MetadataElement.IN_SITU, Boolean.parseBoolean(value)));
 	}
     };
 
@@ -868,12 +860,12 @@ public abstract class OSParameters {
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
 	    // e.g: [0,20]
-	    if (!value.equals("")) {
+	    if (!value.isEmpty()) {
 
 		String[] range = value.replace("[", "").replace("]", "").split(",");
 		LogicalBond andBond = BondFactory.createAndBond();
-		ResourcePropertyBond min = BondFactory.createSSCScoreBond(BondOperator.GREATER_OR_EQUAL, Integer.valueOf(range[0]));
-		ResourcePropertyBond max = BondFactory.createSSCScoreBond(BondOperator.LESS_OR_EQUAL, Integer.valueOf(range[1]));
+		ResourcePropertyBond min = BondFactory.createSSCScoreBond(BondOperator.GREATER_OR_EQUAL, Integer.parseInt(range[0]));
+		ResourcePropertyBond max = BondFactory.createSSCScoreBond(BondOperator.LESS_OR_EQUAL, Integer.parseInt(range[1]));
 		andBond.getOperands().add(min);
 		andBond.getOperands().add(max);
 		return Optional.of(andBond);
@@ -892,12 +884,12 @@ public abstract class OSParameters {
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
 	    // e.g: [0,20]
-	    if (!value.equals("")) {
+	    if (!value.isEmpty()) {
 
 		String[] range = value.replace("[", "").replace("]", "").split(",");
 
 		SimpleValueBond min = BondFactory.createSimpleValueBond(BondOperator.GREATER_OR_EQUAL, MetadataElement.CLOUD_COVER_PERC,
-			Double.valueOf(range[0]));
+			Double.parseDouble(range[0]));
 
 		if (range.length == 1) {
 
@@ -907,7 +899,7 @@ public abstract class OSParameters {
 		LogicalBond andBond = BondFactory.createAndBond();
 
 		SimpleValueBond max = BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.CLOUD_COVER_PERC,
-			Double.valueOf(range[1]));
+			Double.parseDouble(range[1]));
 
 		andBond.getOperands().add(min);
 		andBond.getOperands().add(max);
@@ -926,7 +918,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -941,7 +933,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -956,7 +948,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -971,7 +963,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -986,7 +978,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1001,7 +993,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1016,7 +1008,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1031,7 +1023,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1046,7 +1038,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1061,7 +1053,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1076,11 +1068,11 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
-	    return Optional.of(BondFactory.createIsValidatedBond(Boolean.valueOf(value)));
+	    return Optional.of(BondFactory.createIsValidatedBond(Boolean.parseBoolean(value)));
 	}
     };
 
@@ -1091,13 +1083,13 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
 	    String[] split = value.split("_");
 
-	    ArrayList<Bond> bondList = new ArrayList<Bond>();
+	    ArrayList<Bond> bondList = new ArrayList<>();
 
 	    for (String bbox : split) {
 
@@ -1116,7 +1108,7 @@ public abstract class OSParameters {
 	    if (bondList.size() > 1) {
 		bond = BondFactory.createAndBond(bondList.toArray(new Bond[] {}));
 	    } else if (bondList.size() == 1) {
-		bond = bondList.get(0);
+		bond = bondList.getFirst();
 	    }
 
 	    return Optional.of(bond);
@@ -1131,7 +1123,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 
 		return Optional.empty();
 	    }
@@ -1149,7 +1141,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) throws Exception {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1170,7 +1162,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1191,7 +1183,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1212,7 +1204,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1234,7 +1226,7 @@ public abstract class OSParameters {
 	@Override
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
-	    if (value == null || value.equals("")) {
+	    if (value == null || value.isEmpty()) {
 		return Optional.empty();
 	    }
 
@@ -1261,14 +1253,14 @@ public abstract class OSParameters {
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
 	    // e.g: [0,20]
-	    if (!value.equals("")) {
+	    if (!value.isEmpty()) {
 
 		String[] range = value.replace("[", "").replace("]", "").split(",");
 		LogicalBond andBond = BondFactory.createAndBond();
 		SimpleValueBond min = BondFactory.createSimpleValueBond(BondOperator.GREATER_OR_EQUAL, MetadataElement.CONFIDENCE_CROP_TYPE,
-			Double.valueOf(range[0]));
+			Double.parseDouble(range[0]));
 		SimpleValueBond max = BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.CONFIDENCE_CROP_TYPE,
-			Double.valueOf(range[1]));
+			Double.parseDouble(range[1]));
 		andBond.getOperands().add(min);
 		andBond.getOperands().add(max);
 		return Optional.of(andBond);
@@ -1288,14 +1280,14 @@ public abstract class OSParameters {
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
 	    // e.g: [0,20]
-	    if (!value.equals("")) {
+	    if (!value.isEmpty()) {
 
 		String[] range = value.replace("[", "").replace("]", "").split(",");
 		LogicalBond andBond = BondFactory.createAndBond();
 		SimpleValueBond min = BondFactory.createSimpleValueBond(BondOperator.GREATER_OR_EQUAL, MetadataElement.CONFIDENCE_LC_TYPE,
-			Double.valueOf(range[0]));
+			Double.parseDouble(range[0]));
 		SimpleValueBond max = BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.CONFIDENCE_LC_TYPE,
-			Double.valueOf(range[1]));
+			Double.parseDouble(range[1]));
 		andBond.getOperands().add(min);
 		andBond.getOperands().add(max);
 		return Optional.of(andBond);
@@ -1315,14 +1307,14 @@ public abstract class OSParameters {
 	public Optional<Bond> asBond(String value, String... relatedValues) {
 
 	    // e.g: [0,20]
-	    if (!value.equals("")) {
+	    if (!value.isEmpty()) {
 
 		String[] range = value.replace("[", "").replace("]", "").split(",");
 		LogicalBond andBond = BondFactory.createAndBond();
 		SimpleValueBond min = BondFactory.createSimpleValueBond(BondOperator.GREATER_OR_EQUAL, MetadataElement.CONFIDENCE_IRR_TYPE,
-			Double.valueOf(range[0]));
+			Double.parseDouble(range[0]));
 		SimpleValueBond max = BondFactory.createSimpleValueBond(BondOperator.LESS_OR_EQUAL, MetadataElement.CONFIDENCE_IRR_TYPE,
-			Double.valueOf(range[1]));
+			Double.parseDouble(range[1]));
 		andBond.getOperands().add(min);
 		andBond.getOperands().add(max);
 		return Optional.of(andBond);
@@ -1463,10 +1455,10 @@ public abstract class OSParameters {
 	String longitude = what3Words.getLongitude();
 
 	return create( //
-		Double.valueOf(latitude) - additionalDegrees, // south
-		Double.valueOf(longitude) + additionalDegrees, // west
-		Double.valueOf(latitude) - additionalDegrees, // north
-		Double.valueOf(longitude) + additionalDegrees, relatedValues); // east
+		Double.parseDouble(latitude) - additionalDegrees, // south
+		Double.parseDouble(longitude) + additionalDegrees, // west
+		Double.parseDouble(latitude) - additionalDegrees, // north
+		Double.parseDouble(longitude) + additionalDegrees, relatedValues); // east
     }
 
     /**
@@ -1484,17 +1476,17 @@ public abstract class OSParameters {
 	What3Words what3Words1 = new What3Words(split1[0], split1[1], split1[2]);
 	What3Words what3Words2 = new What3Words(split2[0], split2[1], split2[2]);
 
-	double lat1 = Double.valueOf(what3Words1.getLatitude());
-	double lon1 = Double.valueOf(what3Words1.getLongitude());
+	double lat1 = Double.parseDouble(what3Words1.getLatitude());
+	double lon1 = Double.parseDouble(what3Words1.getLongitude());
 
-	double lat2 = Double.valueOf(what3Words2.getLatitude());
-	double lon2 = Double.valueOf(what3Words2.getLongitude());
+	double lat2 = Double.parseDouble(what3Words2.getLatitude());
+	double lon2 = Double.parseDouble(what3Words2.getLongitude());
 
 	return create( //
-		lat1 <= lat2 ? lat1 : lat2, // south
-		lon1 <= lon2 ? lon1 : lon2, // west
-		lat1 >= lat2 ? lat1 : lat2, // north
-		lon1 >= lon2 ? lon1 : lon2, relatedValues); // east
+		Math.min(lat1, lat2), // south
+		Math.min(lon1, lon2), // west
+		Math.max(lat1, lat2), // north
+		Math.max(lon1, lon2), relatedValues); // east
     }
 
     /**
